# multivariate_laplace_sampler

./: .bumpversion.cfg  .gitignore  README.md  VersionHistory.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/mv_laplace/: MvLaplaceSampler.py  PydanticConfig.py  __init__.py
tests/: test_MvLaplaceSampler.py  test_placeholder.py
tests/data/: mv_laplace_sample.csv
