[tool.poetry]
name = "mv-laplace"
version = "0.1.1"
description = "A sampler package from a Multivariate Laplace distrbrution"
authors = ["Jason M. Cherry <jcherry@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "mv_laplace", from = "./src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scipy = "^1.9.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.0"
jupyterlab-git = "^0.39.3"
jupyterlab-system-monitor = "^0.8.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
